exchande: 功能优化